# pinata

./: .env.template  .gitignore  README.md  evaluation.py  main.py  pyproject.toml  run.py
benchmark/: classifieds_failing.csv  classifieds_passing.csv  onestopshop_failing.csv  onestopshop_passing.csv  postmill_failing.csv  postmill_passing.csv
data/: OneStop_Passing.csv
js/: element_to_html_string.js  mark_page.js
scripts/: browser.py
src/Benchmark/: evaluation.py
src/VTAAS/benchmark/: evaluation.py
src/VTAAS/data/: testcase.py
src/VTAAS/llm/: anthropic_client.py  google_client.py  llm_client.py  mistral_client.py  openai_client.py  openrouter_client.py  utils.py
src/VTAAS/orchestrator/: init_prompt.txt  orchestrator.py  prompt.txt  recover_prompt.txt  synthesis_prompt.txt  system_prompt.txt
src/VTAAS/schemas/: llm.py  verdict.py  worker.py
src/VTAAS/utils/: llm_client.py  logger.py  test_case_reader.py
src/VTAAS/workers/: actor.py  actor_prompt.txt  actor_prompt_prompt.txt  assertor.py  assertor_prompt.txt  browser.py  observer.py
src/orchestrator/: orchestrator.py
src/schemas/: worker_schemas.py
src/utils/: config.py  llm_client.py  logger.py
src/workers/: actor.py  browser.py  observer.py
tests/: test_actor.py  test_assertor.py  test_browser.py  test_full.py  test_llm_client.py  test_orchestration.py  test_orchestrator.py  test_tc_reader.py
